[package]
name = "regex-splitter"
version = "0.1.0"
edition = "2021"
author = ["Chris Palmer <chris@noncombatant.org>"]
license-file = "LICENSE"
description = """
This crate provides an `Iterator` that scans a `Read` looking for instances of
a `Regex` delimiter, and yields the bytes between instances of the delimiter.
"""
repository = "https://github.com/noncombatant/regex-splitter"
readme = "README.md"
categories = ["text-processing"]
keywords = ["regex", "iterator", "read", "chunking", "lexing", "scanning"]

[dependencies]
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.14.0"

[[bin]]
name = "readme"
